[package]
name = "solana-debt"
version = "0.1.0"
authors = ["defacto <defactojob@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.7.1"
solana-program = "1.4.8"
solana-sdk = "1.4.8"
spl-token = { version = "3.0.0", features = [ "no-entrypoint" ] }
byteorder = "1.3"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"

[dev-dependencies]
solana-sdk = "1.4.8"
hex = "0.4"

[lib]
crate-type = ["cdylib", "lib"]

[features]
program = []
no-entrypoint = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]